tests/lang/compile_fail/or_pattern_binding.expo
fn main
  x = 5
  match x
    1 | n -> print(n)
    _ -> print("other")
  end
end
